* Fixed wrong padding value in material page titles when viewing pages in desktop mode.

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/material-page.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/material-page.scss
@@ -51,6 +51,7 @@
   @include breakpoint($breakpoint-pad) {
     font-size: 1.375rem;
     margin: 20px 0 0;
+    padding: 0 20px;
   }
 }
 
